--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -201,4 +201,13 @@
       opacity: 0.8;
     }
   }
+
+  /* Animation delay utilities */
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+
+  .animation-delay-4000 {
+    animation-delay: 4s;
+  }
 }
